# DENN

./: .gitignore  CMakeLists.txt  README.md  makefile  requirements.txt
datasets/: build_esr_1_2.py  build_fashion_mnist.py  build_har_only_training.py  build_mnist.py  build_wdbc.py  build_xor.py
datasets/DennDBLib/: analyzer.py  creator.py  modifier.py  reader.py  utils.py  var.py
include/Denn/: Algorithm.h  Arguments.h  Config.h  Constants.h  CostFunction.h  Crossover.h  DataSet.h  DatasetLoader.h  Denn.h  Evaluation.h  EvolutionMethod.h  Individual.h  Instance.h  InstanceUtils.h  Layer.h  Mutation.h  NeuralNetwork.h  Optimizer.h  ParameterInfo.h  Parameters.h  PointFunction.h  (+6 more)
source/: Algorithm.cpp  Arguments.cpp  CrossoverFactory.cpp  Evaluation.cpp  EvaluationFactory.cpp  EvolutionMethodFactory.cpp  Individual.cpp  Instance.cpp  InstanceUtils.cpp  Layer.cpp  MutationFactory.cpp  NeuralNetwork.cpp  Optimizer.cpp  ParameterInfo.cpp  Parameters.cpp  ParametersArgs.cpp  ParametersConfig.cpp  ParametersJson.cpp  Population.cpp  RuntimeOutputFactory.cpp  RuntimeOutputItems.cpp  SerializeOutputFactory.cpp  SerializeOutputItems.cpp  TestSetStream.cpp  main.cpp
template/: BP_CNN_KRS_MNIST.config  BP_CNN_MNIST.config  BP_MNIST.config  BP_NN_ESR_1_2.config  BP_NN_HAR_OT.config  BP_NN_MNIST.config  BP_NN_WDBC.config  BP_NN_XOR.config  JADE_CNN_KRS_MNIST.config  JADE_CNN_MNIST.config  JADE_MNIST.config  JADE_NN_ESR_1_2.config  JADE_NN_HAR_OT.config  JADE_NN_MNIST.config  JADE_NN_WDBC.config  JADE_NN_XOR.config  UCB1SHADE_NN_MNIST.config
tests/: instances.txt  runs.py
(+108 files in other folders)
